--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "bootstrap": "^5.0.0-beta3",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
     "secure-ls": "^1.2.6",
     "tslib": "^2.0.0",
