--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.7",
     "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
+    "ngx-toast-notifications": "^1.3.0",
     "rxjs": "~6.6.0",
     "secure-ls": "^1.2.6",
     "tslib": "^2.0.0",
