--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
     "ngx-toast-notifications": "^1.3.0",
