--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@popperjs/core": "^2.9.2",
+    "@types/bootstrap": "^5.0.12",
     "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
     "ngx-toast-notifications": "^1.3.0",
