--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/bootstrap": "^5.0.12",
     "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
+    "ngx-moment": "^5.0.0",
     "ngx-toast-notifications": "^1.3.0",
     "rxjs": "~6.6.0",
     "secure-ls": "^1.2.6",
