--- a/angular.json
+++ b/angular.json
@@ -36,8 +36,9 @@
                                 "./node_modules/bootstrap/scss"
                             ]
                         },
-                        "scripts": [
-                          "./src/assets/plugins/multilevel.js"
+                        "scripts": [],
+                        "allowedCommonJsDependencies": [
+                          "moment/locale/es"
                         ]
                     },
                     "configurations": {
@@ -96,7 +97,6 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss"
                         ],
                         "scripts": []
                     }
