--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
+    "ngx-image-compress": "^11.0.3",
     "ngx-moment": "^5.0.0",
     "ngx-toast-notifications": "^1.3.0",
     "rxjs": "~6.6.0",
