--- a/angular.json
+++ b/angular.json
@@ -16,8 +16,9 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/optic-client-angular",
-                        "index": "src/index.html",
+                      "outputPath": "dist",
+                      "baseHref": "dist/js",
+                      "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
@@ -44,18 +45,21 @@
                     },
                     "configurations": {
                         "production": {
-                            "fileReplacements": [{
+                          "baseHref": "/dist/js",
+                          "fileReplacements": [{
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.prod.ts"
                             }],
                             "optimization": true,
-                            "outputHashing": "all",
+                            "outputHashing": "none",
                             "sourceMap": false,
                             "namedChunks": false,
-                            "extractLicenses": true,
-                            "vendorChunk": false,
+                            "extractLicenses": false,
+                            "vendorChunk": true,
                             "buildOptimizer": true,
-                            "budgets": [{
+                            "commonChunk": false,
+                          "resourcesOutputPath": "./js",
+                          "budgets": [{
                                     "type": "initial",
                                     "maximumWarning": "2mb",
                                     "maximumError": "5mb"
