--- a/angular.json
+++ b/angular.json
@@ -16,9 +16,8 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                      "outputPath": "dist",
-                      "baseHref": "dist/js",
-                      "index": "src/index.html",
+                        "outputPath": "dist",
+                        "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
@@ -40,13 +39,12 @@
 
                         ],
                         "allowedCommonJsDependencies": [
-                          "moment/locale/es"
+                            "moment/locale/es"
                         ]
                     },
                     "configurations": {
                         "production": {
-                          "baseHref": "/dist/js",
-                          "fileReplacements": [{
+                            "fileReplacements": [{
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.prod.ts"
                             }],
@@ -58,8 +56,8 @@
                             "vendorChunk": true,
                             "buildOptimizer": true,
                             "commonChunk": false,
-                          "resourcesOutputPath": "./js",
-                          "budgets": [{
+                            "resourcesOutputPath": "./js",
+                            "budgets": [{
                                     "type": "initial",
                                     "maximumWarning": "2mb",
                                     "maximumError": "5mb"
@@ -101,8 +99,7 @@
                             "src/assets/img/favicon.ico",
                             "src/assets"
                         ],
-                        "styles": [
-                        ],
+                        "styles": [],
                         "scripts": []
                     }
                 },
